cmake_minimum_required(VERSION 3.24)
project(code)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

add_executable(chapter_02_linearlist chapter_02_linearlist/Sqlist.cpp)
add_executable(Test test/Test.cpp)
add_executable(Copy test/Copy.cpp)
add_executable(LinkList chapter_02_linearlist/LinkList.cpp)
add_executable(LinkList2 chapter_02_linearlist/LinkList2.cpp)
add_executable(DLinkList chapter_02_linearlist/DLinkList.cpp)
add_executable(SqStack chapter_03_stack_queue_array/SqStack.cpp)
add_executable(ShStack chapter_03_stack_queue_array/ShStack.cpp)
add_executable(LiStack chapter_03_stack_queue_array/LiStack.cpp)
add_executable(SqQueue chapter_03_stack_queue_array/SqQueue.cpp)
add_executable(LinkQueue chapter_03_stack_queue_array/LinkQueue.cpp)
add_executable(LinkQueue2 chapter_03_stack_queue_array/LinkQueue2.cpp)
add_executable(BracketCheck chapter_03_stack_queue_array/BracketCheck.cpp)