cmake_minimum_required(VERSION 3.24)
project(code)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")

add_executable(chapter_02_linearlist chapter_02_linearlist/sqlist/Sqlist.cpp)
add_executable(Test test/Test.cpp)
add_executable(Copy test/Copy.cpp)
add_executable(LinkList chapter_02_linearlist/linklist/LinkList.cpp)
add_executable(LinkList2 chapter_02_linearlist/linklist/LinkList2.cpp)
add_executable(DLinkList chapter_02_linearlist/linklist/DLinkList.cpp)
add_executable(SqStack chapter_03_stack_queue_array/stack/SqStack.cpp)
add_executable(ShStack chapter_03_stack_queue_array/stack/ShStack.cpp)
add_executable(LiStack chapter_03_stack_queue_array/stack/LiStack.cpp)
add_executable(SqQueue chapter_03_stack_queue_array/queue/SqQueue.cpp)
add_executable(LinkQueue chapter_03_stack_queue_array/queue/LinkQueue.cpp)
add_executable(LinkQueue2 chapter_03_stack_queue_array/queue/LinkQueue2.cpp)
add_executable(BracketCheck chapter_03_stack_queue_array/stack_application/BracketCheck.cpp)
add_executable(BinaryTree chapter_05_trees_and_binary_trees/binary_tree/BinaryTree.cpp)
add_executable(BinaryTree2 chapter_05_trees_and_binary_trees/binary_tree/BinaryTree2.cpp)
add_executable(PreInPostOrder chapter_05_trees_and_binary_trees/binary_tree/PreInPostOrder.cpp)
add_executable(LevelOrder chapter_05_trees_and_binary_trees/binary_tree/LevelOrder.cpp)
add_executable(InThread chapter_05_trees_and_binary_trees/thread_tree/InThread.cpp)
add_executable(PostThread chapter_05_trees_and_binary_trees/thread_tree/PostThread.cpp)
add_executable(PreThread chapter_05_trees_and_binary_trees/thread_tree/PreThread.cpp)